# rust-property

./: .travis.yml  Cargo.toml  README.md  bors.toml  deny.toml
.ci-scripts/: test-expand
.github/workflows/: bors.yaml  ci.yaml
src/: generate.rs  lib.rs  parse.rs
