[package]
name = "property"
version = "0.3.1"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "Generate several common methods for structs automatically."
homepage = "https://github.com/yangby-cryptape/rust-property"
repository = "https://github.com/yangby-cryptape/rust-property"
keywords = ["getter", "setter", "accessor", "mutator"]
categories = ["development-tools::procedural-macro-helpers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-*"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["extra-traits"] }
quote = "~1.0"
proc-macro2 = "~1.0"

[badges]
travis-ci = { repository = "yangby-cryptape/rust-property" }
